# Aria

./: .gitignore  README.md  pyproject.toml
.qoder/plans/: Chat_Input_and_Gemini_Integration_eb7f0464.md
Documentation/: AGENTS.md  COPY.md  DESIGN.md  ROADMAP.md  RULES.md  SCHEMA.md  SPEC.md  TECH_STACK.md  USER_PERSONAS.md
Documentation/Design/: DESIGN.md  code.html
src/aria/: __init__.py  config.py  exceptions.py  main.py  state.py
src/aria/api/: __init__.py  base.py  gemini.py  openrouter.py
src/aria/chat/: __init__.py  history.py
src/aria/context/: __init__.py  injector.py  mention.py
src/aria/db/: __init__.py  connection.py  migrations.py
src/aria/document/: __init__.py  parser.py  tokenizer.py  vault.py
src/aria/ui/: __init__.py  app.py  chat_panel.py  input_bar.py  mention_dropdown.py  message_bubble.py  theme.py  token_budget_bar.py  vault_panel.py
tests/: test_chat_history.py  test_context.py  test_gemini_client.py  test_input_bar.py  test_mention.py  test_openrouter_client.py  test_parser.py  test_vault.py
