[project]
name = "aria"
version = "0.1.0"
description = "Aria — Desktop-first cognitive workspace with AI-powered document analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.25.0",
    "google-genai>=2.8.0",
    "anthropic>=0.40.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "aiohttp>=3.11.0",
    "markdown>=3.7.0",
    "tiktoken>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
